--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,5 +1,17 @@
+trigger:
+- master
 - task: ArtifactoryNpm@2
   inputs:
     command: 'install'
     artifactoryService: 'dineshk'
     sourceRepo: 'dinesh-npm-remote'
+- task: ArtifactoryNpm@2
+  inputs:
+    command: 'ci'
+    artifactoryService: 'dineshk'
+    sourceRepo: 'dinesh-npm-remote'
+    workingFolder: 'npm-example/package.json'
+    collectBuildInfo: true
+    threads: '1'
+    buildName: '$(Build.DefinitionName)'
+    buildNumber: '$(Build.BuildNumber)'
