--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,12 +4,12 @@ steps:
 - task: ArtifactoryNpm@2
   inputs:
     command: 'install'
-    jfrogArtifactoryService: 'dineshk'
+    artifactoryService: 'dineshk'
     sourceRepo: 'dinesh-npm-remote'
 - task: ArtifactoryNpm@2
   inputs:
     command: 'ci'
-    jfrogArtifactoryService: 'dineshk'
+    artifactoryService: 'dineshk'
     sourceRepo: 'dinesh-npm-remote'
     workingFolder: 'npm-example/package.json'
     collectBuildInfo: true
