--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,12 +1,15 @@
 trigger:
 - master
 steps:
+- task: CmdLine@2
+  inputs:
+    script: 'ls -lart $(System.DefaultWorkingDirectory)'
 - task: ArtifactoryNpm@2
   inputs:
     command: 'ci'
     jfrogArtifactoryService: 'dineshk'
     sourceRepo: 'dinesh-npm-remote'
-    workingFolder: '$(System.DefaultWorkingDirectory)/npm-example/package.json'
+    workingFolder: '$(System.DefaultWorkingDirectory)/npm-example'
     collectBuildInfo: true
     threads: '1'
     buildName: '$(Build.DefinitionName)'
