--- a/npm-example/package.json
+++ b/npm-example/package.json
@@ -7,8 +7,8 @@
   "dependencies": {
     "send": "^0.16.2"
   },
-   “dependencies”: {
-    “json-schema”: “0.2.3"
+   "dependencies": {
+    "json-schema": "0.2.3"
   }
   "devDependencies": {
     "debug": "^4.1.1"
