--- a/npm-example/package.json
+++ b/npm-example/package.json
@@ -5,7 +5,7 @@
     "start": "node helloworld"
   },
   "dependencies": {
-    "json-schema": "0.2.3"
+    "auth0": "^2.42.0"
   },
   "devDependencies": {
     "debug": "^4.1.1"
