--- a/npm-example/package.json
+++ b/npm-example/package.json
@@ -1,18 +1,13 @@
 {
-  "name": "testnpmbuilds",
-  "version": "1.0.0-ot",
-  "description”: “Testing npm builds",
-  "main": "index.js",
+  "name": "npm-example",
+  "version": "0.0.3",
   "scripts": {
-    "no-publish": "npm config list",
-    "publish-this": "npm publish ",
-    "publish-deep": "npm run no-publish -- --json  & npm run inbetween",
-    "inbetween": "npm run publish-this",
-    "no-publish-deep": "npm run no-publish -- --json"
+    "start": "node helloworld"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "json-schema": "0.2.3"
+  },
+  "devDependencies": {
+    "debug": "^4.1.1"
   }
 }
