--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,3 +23,4 @@ steps:
         buildName: '$(Build.DefinitionName)'
         buildNumber: '$(Build.BuildNumber)'
         allowFailBuild: true
+        vuln: false
