Set up CI with Azure Pipelines
[skip ci]

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,26 +1,15 @@
 trigger:
- - master
-steps:
-- task: JFrogNpm@1
+- task: JFrogBuildPromotion@1
   inputs:
-    command: 'install'
-    artifactoryConnection: 'dineshhts2'
-    sourceRepo: 'dinesh-npm-remote'
-    workingFolder: 'npm-example/'
-    arguments: ''
-    collectBuildInfo: true
-    threads: '1'
+    artifactoryConnection: 'dineshkp'
     buildName: '$(Build.DefinitionName)'
     buildNumber: '$(Build.BuildNumber)'
-- task: JFrogPublishBuildInfo@1
-  inputs:
-    artifactoryConnection: 'dineshhts2'
-    buildName: '$(Build.DefinitionName)'
-    buildNumber: '$(Build.BuildNumber)'
-- task: JFrogBuildScan@1
-  inputs:
-        xrayConnection: 'dineshhts2x'
-        buildName: '$(Build.DefinitionName)'
-        buildNumber: '$(Build.BuildNumber)'
-        allowFailBuild: true
-        vuln: false
+    projectKey: 'dineshkp'
+    targetRepo: 'dinesh-docker-local2'
+    status: 'Released'
+    comment: 'promote'
+    sourceRepo: 'dinesh-docker-local1'
+    includeDependencies: true
+    copy: true
+    dryRun: false
+ 
