--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,4 +5,9 @@ registries:
     url: https://incloudmaster.jfrog.io/artifactory/api/npm/customer-npm-remote/
     token: ${{secrets.DINESH}}
 updates:
- 
+  - package-ecosystem: "npm"
+  directory: "/"
+  registries:
+   - Artifactory
+  schedule:
+    interval: "daily"
