--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -2,10 +2,10 @@ version: 2
 registries:
   Artifactory:
     type: npm-registry
-    url: https://incloudmaster.jfrog.io/artifactory/api/npm/customer-npm-local/
+    url: https://incloudmaster.jfrog.io/artifactory/api/pypi/manu-pypi-local/
     token: ${{secrets.DINESH}}
 updates:
-  - package-ecosystem: "npm"
+  - package-ecosystem: "Pypi"
     directory: "/"
     registries:
      - Artifactory
