--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,10 +4,4 @@ registries:
     type: npm-registry
     url: https://incloudmaster.jfrog.io/artifactory/api/npm/customer-npm-remote/
     token: ${{secrets.SHORTTOKEN}}
-updates:
-  - package-ecosystem: "npm"
-    directory: "/"
-    registries:
-     - Artifactory
-    schedule:
-      interval: "daily"
+    replaces-base: true
