--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,4 +4,11 @@ registries:
     type: npm-registry
     url: https://incloudmaster.jfrog.io/artifactory/api/npm/customer-npm-remote/
     token: ${{secrets.SHORTTOKEN}}
-    replaces-base: true
+updates:
+  - package-ecosystem: "npm"
+    directory: "/"
+    registries:
+     - Artifactory
+    schedule:
+      interval: "daily"
+
