--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,7 +3,7 @@ registries:
   Artifactory:
     type: npm-registry
     url: https://incloudmaster.jfrog.io/artifactory/api/npm/customer-npm-local/
-    token: ${{secrets.SHORTTOKEN}}
+    token: ${{secrets.DINESH}}
 updates:
   - package-ecosystem: "npm"
     directory: "npm-example/"
