--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -2,11 +2,11 @@ version: 2
 registries:
   Artifactory:
     type: python-index
-    url: https://incloudmaster.jfrog.io/artifactory/pypi/customer-pypi-remote/
+    url: https://incloudmaster.jfrog.io/artifactory/api/pypi/customer-pypi-remote/
     token: ${{secrets.SHORTTOKEN_KUMAR}}
 updates:
   - package-ecosystem: "pip"
-    directory: "pypi-example/"
+    directory: "python-example/"
     registries:
      - Artifactory
     schedule:
