--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,7 +6,7 @@ registries:
     token: ${{secrets.SHORTTOKEN_KUMAR}}
 updates:
   - package-ecosystem: "pip"
-    directory: "python-example/pip-example/pythonExample/"
+    directory: "python-example/"
     registries:
      - Artifactory
     schedule:
